Image text alignment off fix

--- a/assets/base.css
+++ b/assets/base.css
@@ -263,6 +263,10 @@ html.no-js .no-js-hidden {
   padding: 0 1.5rem;
 }
 
+.page-width-desktop {
+  padding: 0;
+  margin: 0 auto;
+}
 
 @media screen and (min-width: 750px) {
   .page-width {
@@ -271,6 +275,10 @@ html.no-js .no-js-hidden {
 
   .page-width--narrow {
     padding: 0 9rem;
+  }
+
+  .page-width-desktop {
+    padding: 0;
   }
 
   .page-width-tablet {
